Updated HTML and CSS - Finished Work section

--- a/index.html
+++ b/index.html
@@ -63,16 +63,89 @@
   </header>
   <main>
     <!-- Hero section -->
-    <section class="hero position-relative d-flex align-items-center">
+    <section id ="hero" class="position-relative d-flex align-items-center">
       <div class="jumbotron container-xxl">
-        <h1 class="display-4 ls-54 fw-bold">Hello, world!</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+        <h1 class="display-4 ls-54 fw-bold">Hey! I'm Gintaras Jakimavicius</h1>
+        <p class="lead text-uppercase ">Skilled <span>front-end</span> web developer</p>
         <p class="lead">
-          <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+          <a class="btn btn-lg text-uppercase fw-bold" href="#" role="button">Get in touch</a>
         </p>
       </div>
     </section>
+<section id="work">
+  <div class="container-xxl">
+    <div class="row px-12">
+      <div class="col-12 col-sm-2 border-title mt-4 px-0 px-sm-3 pb-3 pb-sm-0">
+      <h2 class="text-start text-sm-end m-0">Work</h2>
+      </div>
+    <div class="col-12 col-sm-10 mt-3 mt-sm-4">
+      <div class="row">
+        <a href="https://fightlabel.staging.sourcedev.site/" target="_blank" class="col-12 px-0 ps-sm-3">
+          <div class="card border-0">
+            <div class="card-body project-one overlay p-0">
+                <div class="card-text-wraper position-absolute">
+                  <h5 class="card-title text-white position-relative ">Fight label</h5>
+                  <p class="card-text text-white position-relative fs-12">WP/HTML/PHP/CSS/JS</p>
+                </div>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="mt-3 row">
+        <a href="https://essencypoweredbygaist.com.au/" target="_blank" class="col-12 col-sm-6 px-0 ps-sm-3">
+          <div class="card border-0">
+            <div class="card-body project-smaller project-two overlay p-0">
+                <div class="card-text-wraper position-absolute">
+                  <h5 class="card-title text-white position-relative ">Essency & Gaist</h5>
+                  <p class="card-text text-white position-relative fs-12">WP/HTML/CSS/JS</p>
+                </div>
+            </div>
+          </div>
+        </a>
+
+        <a href="https://ridgewey.com/" target="_blank" class="col-12 col-sm-6 px-0 ps-sm-3 mt-3 mt-sm-0">
+          <div class="card border-0">
+            <div class="card-body project-smaller project-three overlay p-0">
+                <div class="card-text-wraper position-absolute">
+                  <h5 class="card-title text-white position-relative ">Ridgewey</h5>
+                  <p class="card-text text-white position-relative fs-12">WP/HTML/CSS</p>
+                </div>
+            </div>
+          </div>
+        </a>
+
+        <a href="https://gatherandgather.com/" target="_blank" class="col-12 col-sm-6 px-0 ps-sm-3 mt-3">
+          <div class="card border-0">
+            <div class="card-body project-smaller project-four overlay p-0">
+                <div class="card-text-wraper position-absolute">
+                  <h5 class="card-title text-white position-relative ">Gather & Gather</h5>
+                  <p class="card-text text-white position-relative fs-12">HTML/CSS</p>
+                </div>
+            </div>
+          </div>
+        </a>
+
+        <a href="https://www.chandcogroup.com/" target="_blank" class="col-12 col-sm-6 px-0 ps-sm-3 mt-3">
+          <div class="card border-0">
+            <div class="card-body project-smaller project-five overlay p-0">
+                <div class="card-text-wraper position-absolute">
+                  <h5 class="card-title text-white position-relative ">CH & CO</h5>
+                  <p class="card-text text-white position-relative fs-12">HTML/CSS/JS</p>
+                </div>
+            </div>
+          </div>
+        </a>
+
+      </div>  
+      
+      
+
+    </div>
+    </div>
+  </div>
+
+</section>
   </main>
     <!-- Font awsome kit -->
     <script
